--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -226,8 +226,69 @@ main {
   margin-bottom: 94px;
   width: 1170px;
 }
-.studio-images :not(:last-child) {
+.box1 {
   margin-right: 30px;
+  position: relative;
+  height: 294px;
+}
+.box2 {
+  margin-right: 30px;
+  position: relative;
+  height: 294px;
+}
+.box3 {
+  position: relative;
+  height: 294px;
+}
+.apps1 {
+  display: flex;
+  width: 370px;
+  height: 70px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: #ffffff;
+  /*padding-top: 27px;
+  padding-bottom: 27px;*/
+  position: absolute;
+  bottom: 0px;
+}
+.apps2 {
+  width: 370px;
+  height: 70px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: #ffffff;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  position: absolute;
+  bottom: 0px;
+}
+.apps3 {
+  width: 370px;
+  height: 70px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: #ffffff;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  position: absolute;
+  bottom: 0px;
 }
 /*Our team */
 .our-team {
@@ -626,7 +687,7 @@ footer {
 }
 .portfolio-list {
   width: 370px;
-  height: 404px;
+  height: 404p;
   font-size: 18px;
   font-weight: 700;
   letter-spacing: 0.06em;
@@ -635,16 +696,15 @@ footer {
   margin-bottom: 20px;
   margin-right: 30px;
 }
-/*.portfolio-list :hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}*/
 .portfolio-links {
   display: block;
-  width: 370px;
+  max-width: 100%;
+  height: auto;
+  padding-bottom: 20px;
   height: 404px;
 }
-.portfolio-links :hover {
+.portfolio-links:hover,
+.portfolio-links:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -665,4 +725,8 @@ footer {
   font-size: 16px;
   font-weight: 400;
   color: #757575;
+}
+/*Всплывающие окна*/
+.explanation {
+  display: none;
 }
