--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -225,11 +225,12 @@ main {
 }
 .box1 {
   margin-right: 30px;
-  height: 294px; position: relative;
+  height: 294px;
+  position: relative;
 }
 .box2 {
   margin-right: 30px;
- position: relative;
+  position: relative;
   height: 294px;
 }
 .box3 {
@@ -237,13 +238,15 @@ main {
   height: 294px;
 }
 
-.apps1, .apps2,.apps3 {
-  position:absolute;
+.apps1,
+.apps2,
+.apps3 {
+  position: absolute;
   bottom: 0;
   width: 370px;
-  height:70px ;
+  height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
-  color:#ffffff;
+  color: #ffffff;
   font-family: Roboto;
   font-size: 14px;
   font-style: normal;
@@ -251,13 +254,11 @@ main {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-align: center;
-  text-transform:uppercase ;
+  text-transform: uppercase;
   margin-block-start: 0;
   margin-block-end: 0;
   padding-top: 27px;
   padding-bottom: 27px;
-
-
 }
 /*Our team */
 .our-team {
@@ -755,3 +756,4 @@ footer {
 }
 .portfolio-links:focus ::before {
   transform: translateY(0);
+}
