--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -140,6 +140,26 @@ main {
   font-size: 16px;
   font-weight: 700;
 }
+/*Модальное окно*/
+.backdrop.is-hidden {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+}
 /*Чем мы занимаемся*/
 .icon-box {
   display: flex;
