--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,6 +12,8 @@ body {
 ul {
   list-style: none;
   padding-inline-start: 0px;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 a {
   text-decoration: none;
@@ -26,8 +28,8 @@ header {
   margin: auto;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .nav-links {
   display: flex;
@@ -35,11 +37,43 @@ header {
 }
 
 .nav-links a {
+  position: relative;
   color: #212121;
   font-size: 14px;
   font-weight: 500;
   font-family: "Roboto", sans-serif;
   font-style: normal;
+  cursor: pointer;
+}
+.nav-links a::after {
+  position: absolute;
+  top: 44px;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196f3;
+  opacity: 0;
+}
+.nav-links a:active::after {
+  opacity: 1;
+}
+/*.nav-links a:hover::after {
+  opacity: 1;
+}
+.nav-links a:focus::after {
+  opacity: 1;
+}*/
+#portfolio-studio a {
+  color: #2196f3;
+}
+#portfolio-studio a::after {
+  color: #2196f3;
+  opacity: 1;
+}
+.nav-links a: {
+  color: #2196f3;
 }
 .nav-links > li {
   margin-right: 50px;
@@ -50,10 +84,12 @@ header {
 .nav-contacts {
   display: flex;
   margin-left: auto;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-contacts :not(:first-child) {
   margin-left: 50px;
 }
+/*контакты хедер*/
 .nav-contacts a {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -62,6 +98,7 @@ header {
   line-height: 16px;
   letter-spacing: 0.02em;
   color: #757575;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .smartphone {
@@ -99,8 +136,6 @@ header {
 main {
   margin: auto;
   font-family: "Roboto", sans-serif;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 .efective-solution {
   text-align: center;
@@ -118,6 +153,7 @@ main {
   background-size: cover;
   background-position: center;
   color: #ffffff;
+  /*padding-bottom: 200px;*/
   height: 600px;
 }
 
@@ -139,15 +175,20 @@ main {
   border-radius: 4px;
   font-size: 16px;
   font-weight: 700;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*Модальное окно*/
-.backdrop.is-hidden {
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2;
+}
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
@@ -157,8 +198,30 @@ main {
   left: 50%;
   width: 528px;
   height: 581px;
+  display: flex;
   transform: translate(-50%, -50%);
   background-color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 6px;
+}
+.svg-close {
+  width: 11px;
+  height: 11px;
 }
 /*Чем мы занимаемся*/
 .icon-box {
@@ -247,15 +310,18 @@ main {
   margin-right: 30px;
   height: 294px;
   position: relative;
+  z-index: 1;
 }
 .box2 {
   margin-right: 30px;
   position: relative;
   height: 294px;
+  z-index: 1;
 }
 .box3 {
   position: relative;
   height: 294px;
+  z-index: 1;
 }
 
 .apps1,
@@ -358,7 +424,12 @@ main {
   justify-content: center;
   align-items: center;
 }
-
+.social-icon {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-icon {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .link-list:not(:last-child) {
   margin-right: 10px;
 }
@@ -565,6 +636,9 @@ footer {
   width: 20px;
   height: 20px;
 }
+.our-link-icon {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .our-link-icon :hover {
   background-color: #2196f3;
 }
@@ -586,6 +660,7 @@ footer {
   padding-inline-start: 0px;
   display: flex;
   justify-content: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-buttons :not(:last-child) {
   margin-right: 8px;
