--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -59,12 +59,6 @@ header {
 .nav-links a:active::after {
   opacity: 1;
 }
-/*.nav-links a:hover::after {
-  opacity: 1;
-}
-.nav-links a:focus::after {
-  opacity: 1;
-}*/
 #portfolio-studio a {
   color: #2196f3;
 }
@@ -150,8 +144,7 @@ main {
   background-size: cover;
   background-position: center;
   color: #ffffff;
-  /*padding-bottom: 200px;*/
-  height: 600px;
+  padding-bottom: 200px;
 }
 
 .efective-solution > h1 {
