--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -177,6 +177,7 @@ main {
   background-color: rgba(0, 0, 0, 0.2);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 2;
+  opacity: 1;
 }
 .backdrop.is-hidden {
   opacity: 0;
